@@ -2,11 +2,13 @@
 
 ## 1.2.9
 ### New Features
+* Add setting model to code
+* #19 grid automatisch generieren
 ### Bugfixes
 ### Changes
 * Refactoring of all JS
 * Make only one request per second instead of four per AJAX
-* Refactoring Adminpannel and add settings.json
+* Refactoring adminpannel and add settings.json
 
 ## 1.2.8
 ### New Features
